# -oncogenic-foi-nhanes

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/data_pull/: README.md  download.py  harmonize.py  manifest.yaml  merge.py  run.py
analysis/inference/: fit_hpv.py  fit_hpv_cohort.py  fit_hpv_compare.py  fit_hpv_reverse.py
analysis/model/: README.md  bayesian.py  bayesian_cohort.py  bayesian_reverse.py  catalytic.py  cohort_catalytic.py  reverse_catalytic.py
docs/decisions/: 0001-window-selection.md  0002-hpv-types.md
tests/: conftest.py  test_bayesian_smoke.py  test_catalytic_solver.py  test_cohort_model.py  test_data_pull.py  test_inference_helpers.py  test_parameter_recovery.py  test_reverse_model.py
