[project]
name = "oncogenic-foi-nhanes"
version = "0.0.1"
description = "Multi-pathogen serocatalytic modeling of oncogenic infections in NHANES, with neural-ODE force of infection and projected cancer burden."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ganesh Shiwakoti" }]
keywords = ["epidemiology", "serocatalytic", "force of infection", "NHANES", "Bayesian", "neural ODE", "oncogenic viruses"]

dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyreadstat>=1.2",        # read NHANES XPT files
    "polars>=0.20",
    "pyarrow>=15.0",          # parquet output for the harmonized table
    "pyyaml>=6.0",            # manifest file
    # Bayesian inference
    "numpyro>=0.15",
    "arviz>=0.18",
    # JAX stack for neural-ODE
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "diffrax>=0.5",
    "equinox>=0.11",
    # Survey-weighted analysis
    "samplics>=0.4",
    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
app = [
    "streamlit>=1.36",
    "plotly>=5.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]   # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "sbc: simulation-based calibration tests (nightly only)",
]
